Story 3 - Added validation to gift aid controller - nswag config now a file and allows us to use ActionResult for better responses

--- a/JG.FinTech.GiftAid/appsettings.json
+++ b/JG.FinTech.GiftAid/appsettings.json
@@ -5,5 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "GiftAidTaxRate": 20
+  "GiftAidTaxRate": 20,
+  "Donation.MinimumValue": 2,
+  "Donation.MaximumValue": 100000
 }
