--- a/JG.FinTech.GiftAid/appsettings.json
+++ b/JG.FinTech.GiftAid/appsettings.json
@@ -7,5 +7,9 @@
   "AllowedHosts": "*",
   "GiftAidTaxRate": 20,
   "Donation.MinimumValue": 2,
-  "Donation.MaximumValue": 100000
+  "Donation.MaximumValue": 100000,
+  "ConnectionStrings": 
+  {
+    "GiftAidDb": "Filename=giftaid.db;Password=1234"
+  }
 }
